--- a/config/database.yml
+++ b/config/database.yml
@@ -16,9 +16,8 @@ development:
   adapter: postgresql
   encoding: unicode
   database: ocs-checkin_development
-  pool: 5
-  username: ocs-checkin
-  password:
+  host: localhost
+  port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -42,14 +41,12 @@ test:
   adapter: postgresql
   encoding: unicode
   database: ocs-checkin_test
-  pool: 5
-  username: ocs-checkin
-  password:
+  host: localhost
+  port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
 
 production:
   adapter: postgresql
   encoding: unicode
   database: ocs-checkin_production
-  pool: 5
-  username: ocs-checkin
-  password:
+  host: localhost
+  port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
